@@ -109,11 +109,14 @@ class JvmWorkerImpl(args: JvmWorkerArgs) extends InternalJvmWorkerApi with AutoC
           )
         }
 
-        // Suppress Unsafe warnings on Java >=23, since we use Scala modules built in Scala-3.7 for
-        // compatibility with Java >=11, and Scala-3.7 generates such warnings spuriously
-        val suppressArg = Option.when(Jvm.getJavaMajorVersion(key.javaHome) >= 23) {
-          "--sun-misc-unsafe-memory-access=allow"
-        }
+        val javaMajorVersion = Jvm.getJavaMajorVersion(key.javaHome)
+        val suppressArgs =
+          // Suppress Unsafe warnings on Java >=23, since we use Scala modules built in Scala-3.7 for
+          // compatibility with Java >=11, and Scala-3.7 generates such warnings spuriously
+          Option.when(javaMajorVersion >= 23) { "--sun-misc-unsafe-memory-access=allow" } ++
+            // Silence another benign warning, this one raised by a `com.swoval:file-tree-views`
+            // which is transitively used by Zinc for faster filesystem operations
+            Option.when(javaMajorVersion >= 16) { "--enable-native-access=ALL-UNNAMED" }
 
         val launched = ServerLauncher.launchOrConnectToServer(
           locks,
@@ -124,7 +127,7 @@ class JvmWorkerImpl(args: JvmWorkerArgs) extends InternalJvmWorkerApi with AutoC
               mainClass = mainClass,
               mainArgs = Seq(daemonDir.toString, jobs.toString),
               javaHome = key.javaHome,
-              jvmArgs = key.runtimeOptions ++ suppressArg,
+              jvmArgs = key.runtimeOptions ++ suppressArgs,
               classPath = classPath
             )
             LaunchedServer.OsProcess(process.wrapped.toHandle)
